--- a/requirements64.txt
+++ b/requirements64.txt
@@ -3,7 +3,8 @@ future==0.18.3
 importlib-metadata==6.7.0
 ips-util==1.0
 pefile==2023.2.7
-pygame==2.2.0
+#pygame==2.2.0
+pygame>=2.5.0
 pygame-menu==3.5.8
 PyGetWindow==0.0.9
 pyinstaller==5.13.1
